--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
     <title>Pokeprimata</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="f_body"> 
     <header>
-        <div class="m_header_home">
+        <div class="f_header_home">
             <a href="index.html">
                 <img src="img/logo_pokebola.svg" alt="logo">
                 <h1>POKEPRIMATA</h1>
             </a>
         </div>
-        <nav class="m_header_nav">
-            <a href="index.html" class="m_header_a m_header_marcado">Inicio</a>
-            <a href="#" class="m_header_a">Times</a>
-            <a href="#" class="m_header_a">Pokémon</a>
-            <a href="#" class="m_header_a">Favoritos</a>
-            <a href="#" class="m_header_a">Jogos</a>
+        <nav class="f_header_nav">
+            <a href="index.html" class="f_header_a f_header_marcado">Inicio</a>
+            <a href="#" class="f_header_a">Times</a>
+            <a href="#" class="f_header_a">Pokémon</a>
+            <a href="#" class="f_header_a">Favoritos</a>
+            <a href="#" class="f_header_a">Jogos</a>
         </nav>
-        <div class="m_header_direito">
-            <a href="#"><img src="img/lupa.svg" alt="lupa" class="m_header_lupa"></a>
-            <a href="#" class="m_header_botao_login">LOGIN</a>
-            <a href="#"><img src="img/menu.svg" alt="menu" class="m_header_menu"></a>
+        <div class="f_header_direito">
+            <a href="#"><img src="img/lupa.svg" alt="lupa" class="f_header_lupa"></a>
+            <a href="#" class="f_header_botao_login">LOGIN</a>
+            <a href="#"><img src="img/menu.svg" alt="menu" class="f_header_menu"></a>
         </div>
     </header>
+    <main class="f_main">
+   </main>
 </body>
 </html>
